kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: albionmarket-frontend
spec:
  ports:
    - name: http
      port: 80
  selector:
    app: albionmarket-frontend
